2008-12-28  Adam Dingle  <adam@medovina.org>
 
 	* plugins/document-manager/anjuta-document-manager.ui:
 	* plugins/search/Makefile.am:
 	* plugins/search/anjuta-search.ui:
 	* plugins/search/plugin.c (activate_plugin):
 	Fixed #565278 – remove Next Occurrence and Previous Occurrence commands 

2008-12-28  Adam Dingle  <adam@medovina.org>
 
 	* plugins/search/search-replace_backend.c (search_entry_compare),
 	(create_search_entries):
 	Fixed #565014 – sort Find in Files output by filename 

2008-12-28  Adam Dingle  <adam@medovina.org>
 
 	* manuals/anjuta-manual/C/interface.xml:
 	Corrected documentation of shortcuts for moving to next/previous document.
 	This fixes #565368. 

2008-12-28  Jens Georg  <mail@jensge.org>
 
 	* plugins/cvs-plugin/plugin.c: 
 	Fix regression introduced with last patch for CVS plugin 

2008-12-28  Johannes  Schmid <jhs@gnome.org>

	* plugins/sourceview/anjuta-view.c (anjuta_view_class_init),
	(anjuta_view_dispose):
	Fixed a race conditin where an idle call happens after the object is
	already destroyed.
	
	* plugins/sourceview/sourceview.c (on_open_finish),
	(sourceview_dispose):
	Fixed 564891 – Crash when closing editor window

2008-12-27  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/anjuta-symbol-db-plugin.ui:
	* plugins/symbol-db/Makefile.am:
	* plugins/symbol-db/plugin.c (goto_file_line), (goto_file_tag),
	(on_goto_file_tag_def_activate), (on_goto_file_tag_decl_activate),
	(do_import_system_sources_after_abort), (do_import_system_sources),
	(symbol_db_activate), (symbol_db_deactivate):
	* plugins/symbol-db/plugin.h:
	* plugins/symbol-db/symbol-db-engine-iterator-node.c
	(isymbol_get_icon):
	* plugins/symbol-db/symbol-db-engine-priv.h:
	* plugins/symbol-db/symbol-db-engine-queries.c
	(symbol_db_engine_find_symbol_by_name_pattern):
	* plugins/symbol-db/symbol-db-engine-utils.c
	(sdb_util_load_symbol_pixbufs), (symbol_db_util_get_pixbuf):
	* plugins/symbol-db/symbol-db-engine-utils.h: